# mulbo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  bot.py  database.py  docker-compose.yaml  driver.py  patato.md  setup.cfg  validate.py
docs/: index.pck
foldersage/: foldersage.py  index_mpath.py
godot_code/: CanvasLayer.gd  CanvasLayer.tscn  export_presets.cfg  project.godot
html/: index.html
keynote/: mulbo.key
nodeJS/: index.html  package-lock.json  server.js
nodeJS/front-end/: index.html
pymulbo/: Pipfile  bot.py  database.py  driver.py  gansynth_external.ipynb  url_connect.py  validate.py  yt2wav.py
