[metadata]
name = mulbo
version = 0.0.1
author = Daniel Thoren
author_email = s144222@student.dtu.com
description = A package for audio experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dannydannydanny/mulbo
project_urls =
    Bug Tracker = https://github.com/dannydannydanny/mublo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
